# PassLock

./: .gitignore  .main.js  AGENT_HANDOFF.md  LICENSE  PLAN.md  README.md  firebaseConfig.example.js  index.html  main.js  package-lock.json  package.json  script.js  style.css  tray.js  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: index.html  script.js  style.css
public/: manifest.webmanifest  sw.js
scripts/: launch-electron.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: main.js  main.ts  passwordStore.js  preload.js  preload.ts  sqlite-store.ts  tray.js  tray.ts
src/renderer/: index.html  main.ts  passlock-app.ts  script.js  style.css  styles.css
src/shared/: base64.ts  browser-store.ts  constants.ts  electron-store.ts  generator.test.ts  generator.ts  security.test.ts  security.ts  sync-service.test.ts  sync-service.ts  types.ts  vault-service.test.ts  vault-service.ts
supabase/: schema.sql
