[package]
name = "passlock"
version = "0.1.0"
description = "PassLock Tauri application"
authors = ["" ]
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
