[package]
name = "passlock"
version = "0.1.0"
description = "PassLock Tauri app"
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["path", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

[build-dependencies]
tauri-build = { version = "1" }
